# system-wide-whisper

./: .gitignore  Credits  LICENSE  README.md  TODO  TODO.md  api_keys.yaml  client  config.yaml  config_local.yaml  debug-client  default.nix  flake.nix  generate_client  install.py  install_dependencies.sh  macos_alert.py  main.py  main_wrapper  popup.py  pyproject.toml  requirements.txt  server.py  service_file.service  shell.nix  skhdrc_example_config  skhdrc_example_config.txt  system-wide-whisper  system-wide-whisper.plist
logs/: transciption_time.csv  whisper_transcriptions.txt
mac/: macos_install
src/server/: assembly_ai.py  config.py  data_structures.py  main.py  paste.py  popup.py  text_processing.py
