[tool.poetry]
name = "system-wide-whisper"
version = "0.1.0"
description = "Transcribe what you say and insert where your cursor is."
authors = ["Johannes C. Mayer <j.c.mayer240@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
ffmpeg-python = "^0.2.0"
pyperclip = "^1.8.2"
tqdm = "^4.66.2"
openai = "^0.27.8"
desktop-notifier = "^3.5.6"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
